@@ -115,7 +115,7 @@ Disable automatic conversion of files from DOS/Mac format.
 .BR \-O ", " \-\-morespace
 Use the blank line below the titlebar as extra editing space.
 .TP
-.BR \-P ", " \-\-poslog
+.BR \-P ", " \-\-positionlog
 Log and later read back the location of the cursor and place it there
 again.
 .TP
