@@ -158,7 +158,7 @@ subdirectories.  Also, the current directory is changed to here, so
 files are inserted from this directory.  By default, the operating
 directory feature is turned off.
 .TP
-.B set poslog
+.B set positionlog
 Save the cursor position of files between editing sessions.
 .TP
 .B set preserve
