@@ -1,7 +1,8 @@
 2015-07-15  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c, src/rcfile.c, doc/nanorc.sample.in, doc/man/nano.1,
 	doc/man/nanorc.5, doc/texinfo/nano.texi, doc/syntax/nanorc.nanorc:
-	Unabbreviate the long option --const to --constantshow.
+	Unabbreviate the long option --const to --constantshow, and --poslog
+	to --positionlog, to be more understandable.
 
 2015-07-13  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_int_spell_fix, do_alt_speller): Remove an unneeded
